--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,7 @@ services:
 deploy:
   provider: elasticbeanstalk
   access_key_id: $ACCESSKEYID
-  secret_access_key:
-    secure: $SECRETACCESSKEY
+  secret_access_key: $SECRETACCESSKEY
   region: "us-east-1"
   app: "coa_flask_app"
   env: "coa-flask-app-prod"
