--- a/Pipfile
+++ b/Pipfile
@@ -13,8 +13,10 @@ pytest-cov = "*"
 [packages]
 flask = "*"
 flask-cors = "*"
+pyjwt = "*"
 pymysql = "*"
 uwsgi = "*"
+werkzeug = "*"
 
 [requires]
 python_version = "3.8"
